# Sarvam-AI

./: .env.example  .gitattributes  .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml  sources.yaml
data/manifests/: dataset_analysis.json  dataset_stats.json  emotion_disagreement.json  emotion_relabel.csv  en_air_century.segments.json  en_air_talk.segments.json  en_audiobook_kafan.segments.json  en_mahabharata.segments.json  en_mahabharata_e67.segments.json  en_mahabharata_e69.segments.json  en_nptel.segments.json  en_tedx_amina.segments.json  error_analysis.json  eval_agreement.json  eval_asr.json  eval_asr_indic.json  eval_basic.json  eval_emotion.json  eval_phoneme.json  eval_sources.json  eval_speaker.json  score_ser.json  (+16 more)
reports/: DATASET_CARD.md  report.md
scripts/: analyze_dataset.py  annotate_edge_cases.py  discover.py  emotion_disagreement.py  emotion_relabel.py  enrich_metadata.py  error_analysis.py  eval_agreement.py  eval_asr.py  eval_asr_conformer.py  eval_asr_indic.py  eval_basic.py  eval_emotion.py  eval_phoneme.py  eval_sources.py  eval_speaker.py  eval_speaker_eer.py  human_audit.py  improve_analysis.py  improve_candidate_screen.py  improve_speech_events.py  llm_judge.py  make_figures.py  make_figures2.py  make_figures3.py  make_figures_extra.py  make_report_pdf.py  phoneme_freq.py  score_audio_quality.py  score_emotion2vec.py  score_mms_align.py  score_overlap.py  score_ser.py  tts_readiness.py
tests/: test_audio.py  test_edge_cases.py  test_normalize.py  test_quality_models.py  test_segmentation.py
(+25 files in other folders)
